# backend/app/openapi.json
@@ -344,6 +344,40 @@
             }
           }
         ]
+      },
+      "UserDTO": {
+        "type": "object",
+        "properties": {
+          "Id": {
+            "type": "string",
+            "description": "The ID of the user"
+          },
+          "Roles": {
+            "type": "array",
+            "description": "The roles of the user",
+            "items": {
+              "type": "string"
+            }
+          },
+          "Providers": {
+            "type": "array",
+            "description": "The providers of the user",
+            "items": {
+              "type": "object",
+              "properties": {
+                "Provider": {
+                  "type": "string"
+                },
+                "ProviderId": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "Version": {
+            "type": "integer"
+          }
+        }
       }
     }
   },
@@ -659,6 +693,33 @@
       }
     },
     "/admin/users": {
+      "get": {
+        "summary": "List users",
+        "description": "List users",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDTO"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
       "post": {
         "summary": "Sign up a new user",
         "description": "Sign up a new user",
@@ -1094,11 +1155,11 @@
               "schema": {
                 "type": "object",
                 "required": [
-                  "username",
+                  "email",
                   "password"
                 ],
                 "properties": {
-                  "username": {
+                  "email": {
                     "type": "string"
                   },
                   "password": {
@@ -1130,11 +1191,11 @@
               "schema": {
                 "type": "object",
                 "required": [
-                  "username",
+                  "email",
                   "password"
                 ],
                 "properties": {
-                  "username": {
+                  "email": {
                     "type": "string"
                   },
                   "password": {
